force-app/main/default/src/objects/Loop__DDP_File__c/Loop__DDP_File__c.object-meta.xml
<CustomObject>
    <description>Files for DocGen Packages</description>
    <label>DocGen Package Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocGen Package Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>