force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Bookmark__c.field-meta.xml
<CustomField>
    <fullName>Loop__Bookmark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bookmark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>