force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Compare_Field__c.field-meta.xml
<CustomField>
    <fullName>Loop__Compare_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Compare Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>