force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Compare_Value__c.field-meta.xml
<CustomField>
    <fullName>Loop__Compare_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Compare Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>