force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__DDP__c.field-meta.xml
<CustomField>
    <fullName>Loop__DDP__c</fullName>
    <label>DocGen Package</label>
    <referenceTo>Loop__DDP__c</referenceTo>
    <relationshipLabel>DocGen Package Templates</relationshipLabel>
    <relationshipName>DDP_Files</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>