force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Description__c.field-meta.xml
<CustomField>
    <fullName>Loop__Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>