force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Loop__Document_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>