force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Excel_Print_Titles__c.field-meta.xml
<CustomField>
    <fullName>Loop__Excel_Print_Titles__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Example: Sheet1!A:B; Sheet1!2:3; Sheet2!1:4; Sheet Three!A:A</inlineHelpText>
    <label>Excel Print Titles</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>