force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Excel_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Loop__Excel_Sheets__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is a comma delimited list of Excel Sheet names to include in the output of this file.</inlineHelpText>
    <label>Excel Sheets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>