force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__File_Operations__c.field-meta.xml
<CustomField>
    <fullName>Loop__File_Operations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is a JSON list of operations and their arguments to be performed on this file. Contact Nintex for more information on this feature.</inlineHelpText>
    <label>File Operations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>