force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Loop__Long_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Long Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>