force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Merge_with_Previous__c.field-meta.xml
<CustomField>
    <fullName>Loop__Merge_with_Previous__c</fullName>
    <description>Specifies whether or how the original files should be merged together. Options for Word are Page, Continuous, Section Page, Paragraph, Even, Odd, Line, Column, Text Wrap, None.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Merge with Previous</label>
    <length>255</length>
    <type>Text</type>
</CustomField>