force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__ReportIds__c.field-meta.xml
<CustomField>
    <fullName>Loop__ReportIds__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ReportIds</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>