force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Loop__Section_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Section Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>