force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Type2__c.field-meta.xml
<CustomField>
    <fullName>Loop__Type2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>