force-app/main/default/src/objects/Loop__DDP_File__c/fields/Loop__Vf_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Loop__Vf_Parameters__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vf Parameters</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>